# ReciKit

./: .env  .gitattributes  .gitignore  README.md
agent/: chatbot.py
backend/: .env.example  cli.py  main.py  pyproject.toml  requirements.txt  tests.py
backend/Agent/: __init__.py  chatbot.py  menu_handler.py  models.py  prompts.py
backend/Routes/: auth_routes.py  routes.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/ui/: ChatForm.jsx  DayIndicator.jsx  DayNavigation.jsx  FeatureCard.jsx  MealCard.jsx  MessageInput.jsx  MessageList.jsx  PromptSuggestions.jsx  TypingIndicator.jsx  footer.jsx  image-carousel.jsx  lifestyle.jsx  navbar.jsx  sampledata.js
frontend/src/lib/utils/: audio.js
frontend/src/pages/: ChatWidget.jsx  MealPlan.jsx  chatbot.jsx  inventory.jsx  landingpage.jsx  login.jsx  signup.jsx
recommendation_service/: .dockerignore  .env.example  .gitignore  Dockerfile  api_tests.py  main.py  models.py  notebook.ipynb  prompts.py  pyproject.toml  rec_sys_mcp.py  recommendation_controller.py  requirements.txt  stdio_run.py  tests.py
recommendation_service/lance_db/recipes.lance/_indices/7452b9aa-9600-4da3-82a8-06a3e3c4e0b4/: auxiliary.idx  index.idx
recommendation_service/lance_db/recipes.lance/_indices/c65170ab-bce5-4fce-87f0-ac29d0602b42/: auxiliary.idx  index.idx
recommendation_service/lance_db/recipes.lance/_transactions/: 0-98aeade7-7c34-4497-ac86-01fa78f19d91.txn  0-b7bc4096-2afb-4f47-8be6-0d8d90e5062b.txn  1-b7a9a90f-9b2e-4348-a1de-81a616bac29a.txn  1-ea078980-b50d-43aa-acf6-3a82731f4947.txn
recommendation_service/lance_db/recipes.lance/_versions/: 1.manifest  2.manifest
recommendation_service/mcp/: __init__.py  app.py
recommendation_service/models/all-MiniLM-L6-v2/: train_script.py
recommendation_service/recommendation/: __init__.py  app.py  logger.py  models.py  prompts.py  recommendation_controller.py  tests.py
recommendation_service/scripts/: upload_vectors_to_qdrant.py
