[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.3.0",
    "fastapi>=0.122.0",
    "groq>=0.36.0",
    "itsdangerous>=2.2.0",
    "langchain>=1.1.0",
    "langgraph>=1.0.3",
    "passlib>=1.7.4",
    "pymongo>=4.15.4",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
