[project]
name = "recommendation-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async-lru>=2.0.5",
    "groq>=0.36.0",
    "ipykernel>=7.1.0",
    "mcp>=1.21.2",
    "pandas>=2.3.3",
    "pymongo>=4.15.4",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "qdrant-client>=1.16.0",
    "sentence-transformers[onnx-gpu]>=5.1.2",
]
[pytest]
asyncio_mode = "auto"
