[project]
name = "recommendation-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async-lru>=2.0.5",
    "fastapi>=0.121.3",
    "fastmcp>=2.13.1",
    "groq>=0.36.0",
    "numpy>=2.3.5",
    "onnxruntime>=1.23.2",
    "pymongo>=4.15.4",
    "qdrant-client>=1.16.0",
    "transformers>=4.57.3",
]
[pytest]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
